# streamlit-audio-recorder

./: .gitignore  MANIFEST.in  demo.py  pyproject.toml
st_audiorec/: __init__.py
st_audiorec/frontend/src/: StreamlitAudioRecorder.tsx
