[tool.poetry]
name = "st_audiorec"
version = "0.1.3"
description = "Record audio from the user's microphone in apps that are deployed to the web. (via Browser Media-API)"
authors = ["Stefan Rummer <your-email@example.com>"]
license = "MIT"
homepage = "https://github.com/stefanrmmr/streamlit-audio-recorder"
repository = "https://github.com/stefanrmmr/streamlit-audio-recorder"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.poetry.dependencies]
python = "^3.10"
streamlit = "*"
pydub = "^0.25.1"
openai = "^1.22.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
